force-app/main/default/objects/Invoice_Payment_Requested__e/Invoice_Payment_Requested__e.object-meta.xml
<CustomObject>
    <description>Platform event published from Demo Invoice when user clicks Generate Payment Link. MuleSoft subscribes via Pub/Sub API and calls Stripe to create a payment link.</description>
    <label>Invoice Payment Requested</label>
    <pluralLabel>Invoice Payment Requested</pluralLabel>
</CustomObject>