force-app/main/default/objects/Invoice_Payment_Requested__e/fields/Currency_Code__c.field-meta.xml
<CustomField>
    <fullName>Currency_Code__c</fullName>
    <description>ISO 4217 currency code (USD, EUR, etc.). Stripe expects lowercase.</description>
    <label>Currency Code</label>
    <length>3</length>
    <required>true</required>
    <type>Text</type>
</CustomField>