force-app/main/default/objects/Invoice_Payment_Requested__e/fields/Customer_Email__c.field-meta.xml
<CustomField>
    <fullName>Customer_Email__c</fullName>
    <label>Customer Email</label>
    <length>120</length>
    <type>Text</type>
</CustomField>