force-app/main/default/objects/Invoice_Payment_Requested__e/fields/Invoice_Id__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Id__c</fullName>
    <label>Invoice Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>